[tool.poetry]
name = "joligraf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyfiglet = "^0.8.0"
termcolor = "^1.1"
pillow = "^5.4"
scikit-learn = "^0.20.3"
umap-learn = "^0.3.7"

[tool.poetry.dev-dependencies]
ipython = "^7.3"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
