[tool.poetry]
name = "joligraf"
version = "0.1.0"
description = ""
authors = ["Anaelle Laurans"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyfiglet = "^0.8.0"
termcolor = "^1.1"
pillow = "^5.4"
scikit-learn = "^0.20.3"
umap-learn = "^0.3.7"
numba = "^0.44.0"
python-resize-image = "^1.1"
bokeh = "^1.2"
pandas = "^0.24.2"
hachoir = {git = "https://github.com/vstinner/hachoir"}
torch = "^1.1"
torchvision = "^0.3.0"
lapjv = "^1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.3"
flake8 = "^3.7"
mypy = "^0.701.0"
mccabe = "^0.6.1"

[tool.flake8]
max-complexity = 6
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

